Detalles de notificaciones extendidos, creación de administrador y CRUD invernadero en el perfil de admin.
