# API/controllers/Invernadero.js
@@ -1,3 +1,8 @@
+
+
+
+
+
 'use strict';
 
 var Invernadero = require('../service/InvernaderoService');
@@ -7,21 +12,29 @@ module.exports.deleteGreenhouse = function deleteGreenhouse (req, res, next) {
     Invernadero.deleteGreenhouse(req.swagger.params, res, next);
 
 };
+/*
+module.exports.getGreenhouse = function getGreenhouse (req, res, next) {
 
-module.exports.getInvernadero = function getInvernadero (req, res, next) {
-
-    Invernadero.getInvernadero(req.swagger.params, res, next);
-
-};
-
-module.exports.postInvernadero = function postInvernadero (req, res, next) {
-
-    Invernadero.postInvernadero(req.swagger.params, res, next);
+    Invernadero.getGreenhouse(req.swagger.params, res, next);
 
 };
 
-module.exports.putInvernadero = function putInvernadero (req, res, next) {
+ */
 
-    Invernadero.putInvernadero(req.swagger.params, res, next);
+module.exports.getGreenhouses = function getGreenhouses (req, res, next) {
+
+    Invernadero.getGreenhouses(req.swagger.params, res, next);
+
+};
+
+module.exports.postGreenhouse = function postGreenhouse (req, res, next) {
+
+    Invernadero.postGreenhouse(req.swagger.params, res, next);
+
+};
+
+module.exports.putGreenhouses = function putGreenhouses (req, res, next) {
+
+    Invernadero.putGreenhouses(req.swagger.params, res, next);
 
 };
